@@ -274,7 +274,7 @@ void concrete_option_set::from_command_line(int argc,
 }
 
 static concrete_option const &
-getopt(map<string, concrete_option> const & by_name, string const & name)
+getopt(map<string, concrete_option> const & by_name, string & name)
 {
   // try to match the option name as a whole first, so if the user
   // specified "--foo" and we have "--foo" and "--foo-bar", don't
@@ -282,7 +282,6 @@ getopt(map<string, concrete_option> const & by_name, string const & name)
   map<string, concrete_option>::const_iterator i = by_name.find(name);
   if (i != by_name.end())
     return i->second;
-
 
   // try to find the option by partial name
   vector<string> candidates;
@@ -300,6 +299,7 @@ getopt(map<string, concrete_option> const & by_name, string const & name)
        i = by_name.find(candidates[0]);
        I(i != by_name.end());
        L(FL("expanding option '%s' to '%s'") % name % candidates[0]);
+       name = candidates[0];
        return i->second;
     }
 
@@ -409,7 +409,7 @@ void concrete_option_set::from_command_line(args_vector & args,
           o = getopt(by_name, name);
           is_cancel = (name == o.cancelname);
           if ((!o.has_arg || is_cancel) && equals != string::npos)
-            throw extra_arg(is_cancel ? o.cancelname : o.longname);
+              throw extra_arg(name);
 
           if (o.has_arg && !is_cancel)
             {
@@ -417,7 +417,7 @@ void concrete_option_set::from_command_line(args_vector & args,
                 {
                   separate_arg = true;
                   if (i+1 == args.size())
-                    throw missing_arg(o.longname);
+                    throw missing_arg(name);
                   arg = idx(args,i+1);
                 }
               else
@@ -432,7 +432,7 @@ void concrete_option_set::from_command_line(args_vector & args,
           is_cancel = (name == o.cancelname);
           I(!is_cancel);
           if (!o.has_arg && idx(args,i)().size() != 2)
-            throw extra_arg(o.shortname);
+            throw extra_arg(name);
 
           if (o.has_arg)
             {
@@ -440,7 +440,7 @@ void concrete_option_set::from_command_line(args_vector & args,
                 {
                   separate_arg = true;
                   if (i+1 == args.size())
-                    throw missing_arg(o.shortname);
+                    throw missing_arg(name);
                   arg = idx(args,i+1);
                 }
               else
@@ -511,7 +511,7 @@ void concrete_option_set::from_key_value_pairs(vector<pair<string, string> > con
   for (vector<pair<string, string> >::const_iterator i = keyvals.begin();
        i != keyvals.end(); ++i)
     {
-      string const & key(i->first);
+      string key(i->first);
       arg_type const & value(arg_type(i->second, origin::user));
 
       concrete_option o = getopt(by_name, key);
