@@ -168,6 +168,11 @@ Xxx Xxx 99 99:99:99 UTC 2010
           --nostd        use --no-builtin-rcfile
           --reallyquiet  use --verbosity=-2
 
+        - To aid command line typing, partial option names are tried to
+          be expanded; if the expansion leads to multiple possibilities,
+          all matches and an accompanying short description of the 
+          particular expansion are displayed.
+
         - The 'disapprove' command now accepts a revision range in
           addition to a single revision.
 
